--- a/YerevanOfflineMap/Base.lproj/Main.storyboard
+++ b/YerevanOfflineMap/Base.lproj/Main.storyboard
@@ -1,14 +1,18 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12118" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="YerevanOfflineMap" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +20,54 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YxX-3E-QTi">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oIF-PE-IR5">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="583"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="oIF-PE-IR5" firstAttribute="top" secondItem="YxX-3E-QTi" secondAttribute="top" id="I58-Pf-Myd"/>
+                                    <constraint firstAttribute="bottom" secondItem="oIF-PE-IR5" secondAttribute="bottom" constant="84" id="RHE-Yf-cYK"/>
+                                    <constraint firstAttribute="trailing" secondItem="oIF-PE-IR5" secondAttribute="trailing" id="WFI-PR-gQ1"/>
+                                    <constraint firstItem="oIF-PE-IR5" firstAttribute="leading" secondItem="YxX-3E-QTi" secondAttribute="leading" id="ZCt-w3-fOE"/>
+                                </constraints>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uES-Rw-DgZ">
+                                <rect key="frame" x="107" y="597" width="161" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="P4m-ZN-e3O"/>
+                                    <constraint firstAttribute="width" constant="161" id="r1e-C3-XBu"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="21"/>
+                                <state key="normal" title="Get coordinate"/>
+                                <connections>
+                                    <action selector="getCoordinate:" destination="BYZ-38-t0r" eventType="touchUpInside" id="rXa-nC-Mga"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="uES-Rw-DgZ" secondAttribute="bottom" constant="30" id="61E-XY-Nrz"/>
+                            <constraint firstItem="YxX-3E-QTi" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="7ey-aq-fbJ"/>
+                            <constraint firstItem="uES-Rw-DgZ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="DQA-Ea-uSb"/>
+                            <constraint firstAttribute="trailing" secondItem="YxX-3E-QTi" secondAttribute="trailing" id="Dxz-Vk-idW"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="YxX-3E-QTi" secondAttribute="bottom" id="Ehb-Q3-Qny"/>
+                            <constraint firstItem="YxX-3E-QTi" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="mh3-7e-ORD"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="mapView" destination="YxX-3E-QTi" id="K7t-lg-izn"/>
+                        <outlet property="myMapView" destination="oIF-PE-IR5" id="Iph-YD-GsN"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="36" y="37.331334332833585"/>
         </scene>
     </scenes>
 </document>
